; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/FreeRTOS/Source/extr_tasks.c_vTaskPlaceOnEventList.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/FreeRTOS/Source/extr_tasks.c_vTaskPlaceOnEventList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@pxCurrentTCB = common dso_local global %struct.TYPE_2__* null, align 8
@pdTRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vTaskPlaceOnEventList(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @configASSERT(i32* %5)
  %7 = load i32*, i32** %3, align 8
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pxCurrentTCB, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = call i32 @vListInsert(i32* %7, i32* %9)
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @pdTRUE, align 4
  %13 = call i32 @prvAddCurrentTaskToDelayedList(i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @configASSERT(i32*) #1

declare dso_local i32 @vListInsert(i32*, i32*) #1

declare dso_local i32 @prvAddCurrentTaskToDelayedList(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
